cad-1239 enabled dummy urn for all prosecutors if PTIURN is not in valid pattern